--- a/probes/Makefile
+++ b/probes/Makefile
@@ -14,6 +14,7 @@ obj-m += lttng-probe-sched.o
 obj-m += lttng-probe-irq.o
 obj-m += lttng-probe-signal.o
 obj-m += lttng-probe-timer.o
+obj-m += lttng-user-event.o
 
 obj-m += lttng-probe-statedump.o
 
